--- a/projects/index.html
+++ b/projects/index.html
@@ -121,8 +121,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" width="30%" height="220px"/>
           <div class="card-body">
-            <h5 class="card-title">Unpaired Image-to-Image Translation</h5>
-            <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p>
+            <h5 class="card-title" style="font-style: normal">Unpaired Image-to-Image Translation</h5>
+            <p class="card-text" style="font-style: normal">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data </a>
@@ -142,8 +142,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/Segment.JPG" alt="project thumbnail" width="30%" height="220px"/>
           <div class="card-body">
-            <h5 class="card-title">Multi-Scale image segmentation</h5>
-            <p class="card-text">Image segmentation using mutli-scale attention model.(paper reproduction)</p>
+            <h5 class="card-title" style="font-style: normal">Multi-Scale image segmentation</h5>
+            <p class="card-text" style="font-style: normal">Image segmentation using mutli-scale attention model.(paper reproduction)</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/Final%20Project" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data</a>
@@ -160,8 +160,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/Deep_CA2_2.jpg" alt="project thumbnail" width="30%" height="220px"/>
           <div class="card-body">
-            <h5 class="card-title">Anomaly Detection using Auto-Encoders</h5>
-            <p class="card-text">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
+            <h5 class="card-title" style="font-style: normal">Anomaly Detection using Auto-Encoders</h5>
+            <p class="card-text" style="font-style: normal">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Anomaly-Detection" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.mvtec.com/company/research/datasets/mvtec-ad" target="_blank">Data</a>
@@ -179,8 +179,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/pose.jpg" alt="project thumbnail" height="220px"/>
           <div class="card-body">
-            <h5 class="card-title">Human joint Pose Estimator</h5>
-            <p class="card-text">Detecting the joints of a human body from the LSP dataset.</p>
+            <h5 class="card-title" style="font-style: normal">Human joint Pose Estimator</h5>
+            <p class="card-text" style="font-style: normal">Detecting the joints of a human body from the LSP dataset.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/CA2" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://paperswithcode.com/dataset/lsp" target="_blank">Data </a>
@@ -212,8 +212,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/Arkit.gif" alt="project thumbnail" height="220px"  />
           <div class="card-body">
-            <h5 class="card-title">Accuracy/Precision measurment pipeline</h5>
-            <p class="card-text">Measurement of Iphone 3D sensor's accuracy and precision.
+            <h5 class="card-title" style="font-style: normal">Accuracy/Precision measurment pipeline</h5>
+            <p class="card-text" style="font-style: normal">Measurement of Iphone 3D sensor's accuracy and precision.
 </p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="" target="_blank">Coming Soon</a>
@@ -232,8 +232,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" height="220px" alt="project thumbnail" />
           <div class="card-body">
-            <h5 class="card-title">Citi Bike Analysis for NYC</h5>
-            <p class="card-text".>Extracting and Transforming Citi Bike Data for Analysing the trends and usages.</p>
+            <h5 class="card-title" style="font-style: normal">Citi Bike Analysis for NYC</h5>
+            <p class="card-text" style="font-style: normal">Extracting and Transforming Citi Bike Data for Analysing the trends and usages.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/SajjadPSavoji/CitiBikeNYC" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://ride.citibikenyc.com/system-data" target="_blank">Data </a>
