--- a/projects/index.html
+++ b/projects/index.html
@@ -124,10 +124,10 @@
             <h5 class="card-title" style="font-style: normal">Unpaired Image-to-Image Translation</h5>
             <p class="card-text" style="font-style: normal">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data </a>
-              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/CycleGAN-Report.pdf" target="_blank">Report</a>
-              <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank">Video</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank" style="font-style: normal">Code</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank" style="font-style: normal">Data </a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/CycleGAN-Report.pdf" target="_blank" style="font-style: normal">Report</a>
+              <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank" style="font-style: normal">Video</a>
 
             </div>
           </div>
@@ -145,8 +145,8 @@
             <h5 class="card-title" style="font-style: normal">Multi-Scale image segmentation</h5>
             <p class="card-text" style="font-style: normal">Image segmentation using mutli-scale attention model.(paper reproduction)</p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/Final%20Project" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/Final%20Project" target="_blank" style="font-style: normal">Code</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank" style="font-style: normal">Data</a>
             </div>
           </div>
         </div>
@@ -163,9 +163,9 @@
             <h5 class="card-title" style="font-style: normal">Anomaly Detection using Auto-Encoders</h5>
             <p class="card-text" style="font-style: normal">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Anomaly-Detection" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.mvtec.com/company/research/datasets/mvtec-ad" target="_blank">Data</a>
-              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/Anomaly-Report.pdf" target="_blank">Report</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Anomaly-Detection" target="_blank" style="font-style: normal">Code</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.mvtec.com/company/research/datasets/mvtec-ad" target="_blank" style="font-style: normal">Data</a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/Anomaly-Report.pdf" target="_blank" style="font-style: normal">Report</a>
             </div>
           </div>
         </div>
@@ -182,9 +182,9 @@
             <h5 class="card-title" style="font-style: normal">Human joint Pose Estimator</h5>
             <p class="card-text" style="font-style: normal">Detecting the joints of a human body from the LSP dataset.</p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/CA2" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="https://paperswithcode.com/dataset/lsp" target="_blank">Data </a>
-              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/Report_CA2.pdf" target="_blank">Report</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/CA2" target="_blank" style="font-style: normal">Code</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://paperswithcode.com/dataset/lsp" target="_blank" style="font-style: normal">Data </a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/Report_CA2.pdf" target="_blank" style="font-style: normal">Report</a>
             </div>
           </div>
         </div>
@@ -216,7 +216,7 @@
             <p class="card-text" style="font-style: normal">Measurement of Iphone 3D sensor's accuracy and precision.
 </p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="" target="_blank">Coming Soon</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="" target="_blank" style="font-style: normal">Coming Soon</a>
               
             </div>
           </div>
@@ -235,9 +235,9 @@
             <h5 class="card-title" style="font-style: normal">Citi Bike Analysis for NYC</h5>
             <p class="card-text" style="font-style: normal">Extracting and Transforming Citi Bike Data for Analysing the trends and usages.</p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/SajjadPSavoji/CitiBikeNYC" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="https://ride.citibikenyc.com/system-data" target="_blank">Data </a>
-              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/DAV_Project-Final-Report.pdf" target="_blank">Report</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/SajjadPSavoji/CitiBikeNYC" target="_blank" style="font-style: normal">Code</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://ride.citibikenyc.com/system-data" target="_blank" style="font-style: normal">Data </a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/DAV_Project-Final-Report.pdf" target="_blank" style="font-style: normal">Report</a>
               
             </div>
           </div>
