--- a/talks/index.html
+++ b/talks/index.html
@@ -120,7 +120,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/Video Conferencing Presentation.PNG" alt="project thumbnail"/>
           <div class="card-body">
-            <h5 class="card-title">One-Shot Free-View Neural Talking-Head Synthesis for Video Conferencing</h5>
+            <h5 class="card-title" style="font-style: normal">One-Shot Free-View Neural Talking-Head Synthesis for Video Conferencing</h5>
             <!-- <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p> -->
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2011.15126" target="_blank">Paper</a>
@@ -139,7 +139,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/NeRF.PNG" alt="project thumbnail" />
           <div class="card-body">
-            <h5 class="card-title text-lowercase">NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis</h5>
+            <h5 class="card-title text-lowercase" style="font-style: normal">NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis</h5>
             <!-- <p class="card-text">Image segmentation using mutli-scale attention model.(paper reproduction)</p> -->
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2003.08934" target="_blank">Paper</a>
@@ -157,7 +157,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CyclePres.PNG" alt="project thumbnail"/>
           <div class="card-body">
-            <h5 class="card-title">Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks</h5>
+            <h5 class="card-title" style="font-style: normal">Unpaired Image-to-Image Translation using Cycle-Consistent Adversarial Networks</h5>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/1703.10593" target="_blank">Paper</a>
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank">Video</a>
