--- a/projects/index.html
+++ b/projects/index.html
@@ -158,7 +158,7 @@
         <a href="/projects/Deep-Learning-Course/Anomaly-Detection-Encoder/index.html">
       
         <div class="card">
-          <img class="card-img-top" src="/assets/img/Deep_CA2_2.jpg" alt="project thumbnail" width="30%" height="220px"/>
+          <img class="card-img-top" src="/assets/img/Deep_CA2_2.jpg" alt="project thumbnail" width="300" height="220px"/>
           <div class="card-body">
             <h5 class="card-title" style="font-style: normal">Anomaly Detection using Auto-Encoders</h5>
             <p class="card-text" style="font-style: normal">Desigining an auto-encoder for anomaly detection in the MVTec dataset.</p>
