--- a/cv/index.html
+++ b/cv/index.html
@@ -322,7 +322,7 @@
 								<ul class="items">
 
 											<li>	
-													<span class="item">Collaborating with a team of 5 research scientists, on the <a href="https://montreal.ubisoft.com/en/using-ml-and-complex-math-to-deconstruct-and-reconstruct-human-faces/" target="_blank"><b>face-shifter</b></a> project.</span>						
+													<span class="item">Collaborating with the <a href="https://montreal.ubisoft.com/en/using-ml-and-complex-math-to-deconstruct-and-reconstruct-human-faces/" target="_blank"><b>face-shifter</b></a> team.</span>						
 											</li>
 
 											<li>	
