added a new talk to talk page

--- a/talks/index.html
+++ b/talks/index.html
@@ -112,6 +112,25 @@
 <div id="projects" class="row mt-2 pt-3" style="overflow: visible !important;">
   
 
+    <div class="project-card2">  <!-- Project #3 -->
+      
+        <a href="https://youtu.be/6RblsC0NvqQ">
+      
+        <div class="card">
+          <img class="card-img-top" src="/assets/img/implicit warping for animation with image sets.PNG" alt="project thumbnail"/>
+          <div class="card-body">
+            <h5 class="card-title" style="font-style: normal">Implicit warping for animation with image sets</h5>
+            <!-- <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN.(paper reproduction) </p> -->
+            <div class="row ml-1 mr-1 p-0">
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2210.01794" target="_blank" style="font-style: normal">Paper</a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/6RblsC0NvqQ" target="_blank" style="font-style: normal">Video</a>
+              <a class="badge green waves-effect font-weight-light mr-1" href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqbkdEUm9JdmI5QnZHcFdwLTctZGgtMDJSN0c2QXxBQ3Jtc0trR0JkNEk0SjlxOHczeC04QV9EblVwN1ZBUEhXdFFweldZVzBkNmUyUHBTUnFyelNHOWw0SGNiVXhaLUQyZHVEWGlEMWRXYkFMNHBwM0E2ZU1WT0V5c2w0NjJ6Nkh5V0NQcEllMndKR0RJV3BjeUdpOA&q=https%3A%2F%2Fdocs.google.com%2Fpresentation%2Fd%2F1XOimDpiOwGhU1Xo26pMJ6agF4TcSz-Ri%2Fedit&v=6RblsC0NvqQ" target="_blank" style="font-style: normal">Slides</a>
+
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
 
 
     <div class="project-card2">  <!-- Project #3 -->
