--- a/talks/index.html
+++ b/talks/index.html
@@ -145,6 +145,7 @@
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2011.15126" target="_blank" style="font-style: normal">Paper</a>
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/3UbgeBpWgZM" target="_blank" style="font-style: normal">Video</a>
+              <a class="badge yellow waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/tree/main/deep-learning/computer-vision/nerf" target="_blank" style="font-style: normal">Slides</a>
 
             </div>
           </div>
@@ -164,6 +165,7 @@
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2003.08934" target="_blank" style="font-style: normal">Paper</a>
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/oKKeae_Sc-I" target="_blank" style="font-style: normal">Video</a>
+              <a class="badge yellow waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/tree/main/deep-learning/computer-vision/nerf" target="_blank" style="font-style: normal">Slides</a>
             </div>
           </div>
         </div>
@@ -181,6 +183,7 @@
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/1703.10593" target="_blank" style="font-style: normal">Paper</a>
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank" style="font-style: normal">Video</a>
+              <a class="badge yellow waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/blob/main/deep-learning/computer-vision/gan/Unpaired%20Image-to-Image%20Translation.pptx" target="_blank" style="font-style: normal">Slides</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="/projects/Self-Projects/CycleGAN/index.html" target="_blank" style="font-style: normal">My implementation</a>
             </div>
           </div>
