--- a/talks/index.html
+++ b/talks/index.html
@@ -124,7 +124,7 @@
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2210.01794" target="_blank" style="font-style: normal">Paper</a>
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/6RblsC0NvqQ" target="_blank" style="font-style: normal">Video</a>
-              <a class="badge green waves-effect font-weight-light mr-1" href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqbkdEUm9JdmI5QnZHcFdwLTctZGgtMDJSN0c2QXxBQ3Jtc0trR0JkNEk0SjlxOHczeC04QV9EblVwN1ZBUEhXdFFweldZVzBkNmUyUHBTUnFyelNHOWw0SGNiVXhaLUQyZHVEWGlEMWRXYkFMNHBwM0E2ZU1WT0V5c2w0NjJ6Nkh5V0NQcEllMndKR0RJV3BjeUdpOA&q=https%3A%2F%2Fdocs.google.com%2Fpresentation%2Fd%2F1XOimDpiOwGhU1Xo26pMJ6agF4TcSz-Ri%2Fedit&v=6RblsC0NvqQ" target="_blank" style="font-style: normal">Slides</a>
+              <a class="badge red waves-effect font-weight-light mr-1" href="https://www.youtube.com/redirect?event=video_description&redir_token=QUFFLUhqbkdEUm9JdmI5QnZHcFdwLTctZGgtMDJSN0c2QXxBQ3Jtc0trR0JkNEk0SjlxOHczeC04QV9EblVwN1ZBUEhXdFFweldZVzBkNmUyUHBTUnFyelNHOWw0SGNiVXhaLUQyZHVEWGlEMWRXYkFMNHBwM0E2ZU1WT0V5c2w0NjJ6Nkh5V0NQcEllMndKR0RJV3BjeUdpOA&q=https%3A%2F%2Fdocs.google.com%2Fpresentation%2Fd%2F1XOimDpiOwGhU1Xo26pMJ6agF4TcSz-Ri%2Fedit&v=6RblsC0NvqQ" target="_blank" style="font-style: normal">Slides</a>
 
             </div>
           </div>
@@ -145,7 +145,7 @@
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2011.15126" target="_blank" style="font-style: normal">Paper</a>
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/3UbgeBpWgZM" target="_blank" style="font-style: normal">Video</a>
-              <a class="badge yellow waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/tree/main/deep-learning/computer-vision/nerf" target="_blank" style="font-style: normal">Slides</a>
+              <a class="badge red waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/tree/main/deep-learning/computer-vision/nerf" target="_blank" style="font-style: normal">Slides</a>
 
             </div>
           </div>
@@ -165,7 +165,7 @@
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/2003.08934" target="_blank" style="font-style: normal">Paper</a>
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/oKKeae_Sc-I" target="_blank" style="font-style: normal">Video</a>
-              <a class="badge yellow waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/tree/main/deep-learning/computer-vision/nerf" target="_blank" style="font-style: normal">Slides</a>
+              <a class="badge red waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/tree/main/deep-learning/computer-vision/nerf" target="_blank" style="font-style: normal">Slides</a>
             </div>
           </div>
         </div>
@@ -183,7 +183,7 @@
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://arxiv.org/abs/1703.10593" target="_blank" style="font-style: normal">Paper</a>
               <a class="badge green waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank" style="font-style: normal">Video</a>
-              <a class="badge yellow waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/blob/main/deep-learning/computer-vision/gan/Unpaired%20Image-to-Image%20Translation.pptx" target="_blank" style="font-style: normal">Slides</a>
+              <a class="badge red waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/talks-presentations/blob/main/deep-learning/computer-vision/gan/Unpaired%20Image-to-Image%20Translation.pptx" target="_blank" style="font-style: normal">Slides</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="/projects/Self-Projects/CycleGAN/index.html" target="_blank" style="font-style: normal">My implementation</a>
             </div>
           </div>
