--- a/teaching/index.html
+++ b/teaching/index.html
@@ -157,6 +157,7 @@
         
       </div>
     </div>
+    <h6 class=" mt-2 mt-sm-0" style="font-style: normal">Summer 2023: Teaching Assistant, Lab Instructor</h6>
     <h6 class=" mt-2 mt-sm-0" style="font-style: normal">Fall 2022: Teaching Assistant, Lab Instructor</h6>
     <!--
     <ul class="card-text font-weight-light list-group list-group-flush">
