--- a/index.html
+++ b/index.html
@@ -148,6 +148,33 @@
 <div class="news mt-3 p-0">
   <h1 class="title mb-4 p-0">News</h1>
   
+
+        <div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Jun 18-23, 2023
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>I will be attending the <a href="https://cvpr2023.thecvf.com/">CVPR</a> 2023 conference at Vancouver.
+</p>
+      </div>
+    </div>
+
+
+      <div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Jun 12-14, 2023
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>I volunteered as Master of Ceremonies (MC) for <a href="https://www.torontomachinelearning.com/">Toronto Machine Learning Society (TMLS)</a> conference.
+</p>
+      </div>
+    </div>
+
+
   
     <div class="row p-0">
       <div class="col-sm-2 p-0">
