--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I will be attending the <a href="https://cvpr2023.thecvf.com/">CVPR</a> 2023 conference at Vancouver.
+        <p>I attended the <a href="https://cvpr2023.thecvf.com/">CVPR</a> 2023 conference at Vancouver.
 </p>
       </div>
     </div>
