--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
   
 
         <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+      <div class="col-sm-2 p-0 " style="width: 100px;">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3" style="width: 100px;">
           Jun 18-23, 2023
         </span>
       </div>
@@ -163,8 +163,8 @@
 
 
       <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+      <div class="col-sm-2 p-0" style="width: 100px;">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3" style="width: 100px;">
           Jun 12-14, 2023
         </span>
       </div>
