--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
   
     <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+      <div class="col-sm-2 p-0" style="width: 100px;">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3" style="width: 100px;">
           Jan 9, 2023
         </span>
       </div>
@@ -189,8 +189,8 @@
     </div>
 
     <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+      <div class="col-sm-2 p-0" style="width: 100px;">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3" style="width: 100px;">
           Sep 14, 2021
         </span>
       </div>
@@ -201,8 +201,8 @@
     </div>
   
     <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+      <div class="col-sm-2 p-0" style="width: 100px;">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3" style="width: 100px;">
           July 22, 2021
         </span>
       </div>
@@ -213,8 +213,8 @@
     </div>
   
     <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+      <div class="col-sm-2 p-0" style="width: 100px;">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3" style="width: 100px;">
           Apr 14, 2021
         </span>
       </div>
@@ -226,8 +226,8 @@
   
 
       <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+      <div class="col-sm-2 p-0" style="width: 100px;">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3" style="width: 100px;">
           Sep 10, 2020
         </span>
       </div>
@@ -240,8 +240,8 @@
 
 
         <div class="row p-0">
-      <div class="col-sm-2 p-0">
-        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+      <div class="col-sm-2 p-0" style="width: 100px;">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3" style="width: 100px;">
           Jun 15, 2019
         </span>
       </div>
