changed a few pages

--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I attended the <a href="https://cvpr2023.thecvf.com/">CVPR</a> 2023 conference at Vancouver.
-</p>
+        <p>Attended the <a href="https://cvpr2023.thecvf.com/">CVPR</a> 2023 conference at Vancouver.</p>
       </div>
     </div>
 
@@ -170,13 +169,26 @@
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
         <p>I volunteered as Master of Ceremonies (MC) for <a href="https://www.torontomachinelearning.com/">Toronto Machine Learning Society (TMLS)</a> conference.
-</p>
+      </p>
       </div>
     </div>
 
 
   
     <div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Jan 12, 2023
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>I recently was entitled as a <a href="https://vectorinstitute.ai/" target="_blank">Vector</a> Faculty Affiliate Researcher.
+</p>
+      </div>
+    </div>
+
+
+  <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
           Jan 9, 2023
@@ -188,6 +200,8 @@
       </div>
     </div>
 
+
+
     <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
@@ -195,7 +209,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I joined <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a> / <a href="https://cvil.eecs.yorku.ca/" target="_blank">Computational Vision and Imaging Lab</a> as a Research Assistant.
+        <p>I joined <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a> / <a href="https://yorkucvil.github.io/" target="_blank">Computational Vision and Imaging Lab</a> as a Research Assistant.
 </p>
       </div>
     </div>
