new updated for website

--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -292,6 +292,7 @@ Our results and output were quite reasonable; however, we could not train the en
 <ul>
   <li>Code: <a href="https://github.com/aminfadaei116/CycleGan">link</a> </li>
   <li>Report: <a href="/assets/pdf/Projects-Reports/CycleGAN-Report.pdf">link</a> </li>
+  <li>Presentation: <a href="https://www.youtube.com/watch?v=wXQPglO9ZTo">link</a> </li>
 </ul>
 
   </div>
