--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Amin Fadaeinejad</title>
+  <title>Amin (David) Fadaeinejad</title>
   <meta name="description" content="This is the personal website of Amin Fadaeinejad">
 
   <!-- Fonts and Icons -->
