--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     
 
 <div class="col p-0 pt-4 pb-4">
-  <h1 class="pb-3 title text-left font-weight-bold">Amin Fadaeinejad</h1>
+  <h1 class="pb-3 title text-left font-weight-bold">Amin (David) Fadaeinejad</h1>
   <h6 class="m-0 mb-2" style="font-size: 0.83em;"></h6>
   
       <h6 class="m-0 mb-2" style="font-size: 0.83em;">Toronto, Ontario, CA</h6>
