--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <img class="profile-img img-responsive" src="/assets/img/prof_pic.jpg" />
         </div>
 
-        <p> Hi there I am Amin Fadaeinejad, a motivated and driven individual currently working as an R&D intern at <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> in Toronto. 
+        <p> Hi there I am David, a motivated and driven individual currently working as an R&D intern at <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> in Toronto. 
 
         My expertise lies in the field of deep learning and its application in computer vision. At Ubisoft La Forge, I utiliz cutting-edge deep learning models to develop tools that assist artists in creating models more efficiently.</p> 
 
@@ -285,7 +285,7 @@
 
   <!-- Footer -->
  <footer>
-    &copy; Copyright 2023 Amin Fadaeinejad.
+    &copy; Copyright 2023 David Fadaeinejad.
     
     
   </footer> 
