--- a/cv/index.html
+++ b/cv/index.html
@@ -346,7 +346,7 @@
 											</li>
 
 											<li>	
-													<span class="item">Collaborated with a team of esteemed research scientists on multiple projects aimed at publishing papers in prestigious conferences, including CVPR.</span>						
+													<span class="item">Collaborated with a team of esteemed research scientists on multiple projects aimed at publishing papers in prestigious conferences</span>						
 											</li>
 
 										
