--- a/teaching/index.html
+++ b/teaching/index.html
@@ -104,7 +104,34 @@
   
 
 
+
+
 <h3 class="mt-4"><nobr><em>York University</nobr></h3>
+
+
+
+
+<div class="card mt-3">
+  <div class="p-3">
+    <div class="row">
+      <div class="col-sm-10">
+        <h5 class="font-weight-bold" style="font-style: normal">Object Oriented Programming</h5>
+      </div>
+      <div class="col-sm-2 text-left text-sm-right">
+        
+      </div>
+    </div>
+    <h6 class=" mt-2 mt-sm-0" style="font-style: normal">Winter 2024: Teaching Assistant, Lab Instructor</h6>
+    <!--
+    <ul class="card-text font-weight-light list-group list-group-flush">
+      <li class="list-group-item">○ Graduate level introduction to machine learning class for masters and PhD students taught by  <a href="https://www.cs.cmu.edu/~rsalakhu/" target="_blank">Prof. Ruslan Salakhutdinov</a>.</li>
+      <li class="list-group-item">○ I mentored groups of students working on class projects, graded homeworks and exams.</li>
+      <li class="list-group-item">○ Course materials can be found <a href="http://www.cs.cmu.edu/~rsalakhu/10707/" target="_blank">here</a>.</li>
+    </ul>
+  -->
+  </div>
+</div>
+
 
 <div class="card mt-3">
   <div class="p-3">
