--- a/teaching/index.html
+++ b/teaching/index.html
@@ -206,6 +206,7 @@
    
       </div>
     </div>
+    <h6 class="mt-2 mt-sm-0" style="font-style: normal">Fall 2023: Teaching Assistant</h6>
     <h6 class="mt-2 mt-sm-0" style="font-style: normal">Fall 2021: Teaching Assistant</h6>
     <!--
     <ul class="card-text font-weight-light list-group list-group-flush">
