--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@
   <h1 class="title mb-4 p-0">News</h1>
   
 
+  <div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Feb 27, 2024
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>Our work <a href="https://cvpr2023.thecvf.com/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the CVPR 2024 conference Seattle.</p>
+      </div>
+    </div>
+
+
+
         <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
