--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>Our work <a href="https://cvpr2023.thecvf.com/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the CVPR 2024 conference Seattle.</p>
+        <p>Our work <a href="https://cvpr2023.thecvf.com/">MosAR: Monocular Semi-Supervised Model for Avatar Reconstruction using Differentiable Shading</a>  got accepted to the CVPR 2024 conference in Seattle, Washington.</p>
       </div>
     </div>
 
