--- a/cv/index.html
+++ b/cv/index.html
@@ -311,7 +311,7 @@
 								
 								<div class="col-xs-2 cl-sm-2 col-md-auto text-left" style="width: 130px;">
 									<span class="badge font-weight-bold light-green darken-1 text-uppercase align-middle" style="width: 130px;">
-										Jan 2023 - Present
+										Jan 2023 - March 2024
 									</span>
 								</div>
 							
