--- a/index.html
+++ b/index.html
@@ -129,12 +129,22 @@
           <img class="profile-img img-responsive" src="/assets/img/prof_pic.jpg" />
         </div>
 
-        <p> Hi there I am David, a motivated and driven individual currently working as an R&D intern at <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> in Toronto. 
+        As an ML Engineer with four years of experience, I work at a startup specializing in computer vision and graphics to address a novel challenge.
+
+Previously, I was with Ubisoft Toronto, collaborating with the <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> team to design innovative solutions that enable creators to automatically generate ultra-realistic faces for non-playable characters. This involved using state-of-the-art generative models and computer vision techniques to streamline the creation of facial models and eliminate artifacts.
+
+I am currently pursuing my master's degree in Electrical and Computer Engineering at York University, conducting research on view synthesis and image manipulation under the guidance of <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>. I am also a Vector Faculty Affiliate Researcher, contributing to the advancement of AI in Canada.
+
+With extensive experience in research and engineering, I have developed and deployed robust machine learning models in areas such as deep learning, natural language processing, and data analysis. I am passionate about advancing the intersection of computer graphics, computer vision, and deep learning, with a particular interest in diffusion models and NERFs.
+
+Beyond my academic and professional endeavors, I engage in personal projects to apply my skills to diverse challenges and enjoy outdoor activities for inspiration. I am eager to connect and collaborate with others who share a passion for deep learning, generative models, computer vision, and computer graphics.
+
+ <!--        <p> Hi there I am David, a motivated and driven individual currently working as an R&D intern at <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> in Toronto. 
 
         My expertise lies in the field of deep learning and its application in computer vision. At Ubisoft La Forge, I utiliz cutting-edge deep learning models to develop tools that assist artists in creating models more efficiently.</p> 
 
         <p> In addition to my work at Ubisoft, I am also a research assistant at York University supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>, where I specialize in the application of deep learning in computer vision. With my strong background in deep learning and passion for developing innovative solutions, I am sure to make a significant impact in his field. </p>
-
+ -->
     </div>
 </div>
 
