--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <img class="profile-img img-responsive" src="/assets/img/prof_pic.jpg" />
         </div>
 
-        As an ML Engineer with four years of experience, I work at a startup specializing in computer vision and graphics to address a novel challenge.
+        An ML Engineer with four years of experience, specializing in computer vision and graphics.
 
 Previously, I was with Ubisoft Toronto, collaborating with the <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> team to design innovative solutions that enable creators to automatically generate ultra-realistic faces for non-playable characters. This involved using state-of-the-art generative models and computer vision techniques to streamline the creation of facial models and eliminate artifacts.
 
