--- a/index.html
+++ b/index.html
@@ -156,6 +156,18 @@ With extensive experience in research and engineering, I have developed and depl
 <div class="news mt-3 p-0">
   <h1 class="title mb-4 p-0">News</h1>
 
+<div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          August 23, 2024
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>I got a contract from  <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Teaching Assistant for their AI Model Bootcamp.</p>
+      </div>
+    </div>
+
+
   <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
