--- a/cv/index.html
+++ b/cv/index.html
@@ -328,7 +328,7 @@
 											</li>
 
 											<li>	
-													<span class="item">Hands-on working hours to assist with the Bootcamp participants during the Technical Lab and Bootcamp Sessions.</span>						
+													<span class="item">Providing hands-on support to Bootcamp participants during Technical Lab to successfully deploy their models on the GCP.</span>						
 											</li>
 
 											<li>	
