Update; Ended my job at Vector

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         </div>
 
         An ML Engineer with four years of experience, specializing in computer vision and graphics.
-Previously, I was with Ubisoft Toronto, collaborating with the <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> team to design innovative solutions that enable creators to automatically generate ultra-realistic faces for non-playable characters. This involved using state-of-the-art generative models and computer vision techniques to streamline the creation of facial models and eliminate artifacts.
+Previously, I was with Ubisoft Toronto, collaborating with the <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> team to design innovative solutions that enable creators to automatically generate ultra-realistic faces for non-playable characters. This involved using state-of-the-art generative models and computer vision techniques to streamline the creation of facial models and eliminate artifacts. I also worked with <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Technical Facilitator for their AI Model Bootcamp.
 
-I am currently pursuing my master's degree in Electrical and Computer Engineering at York University, conducting research on view synthesis and image manipulation under the guidance of <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>. I am also a Vector Faculty Affiliate Researcher, contributing to the advancement of AI in Canada.
+I graduated with a master's degree in Electrical and Computer Engineering at York University, conducted research on view synthesis and image manipulation under the guidance of <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>. I am also a Vector Faculty Affiliate Researcher, contributing to the advancement of AI in Canada.
 
 With extensive experience in research and engineering, I have developed and deployed robust machine learning models in areas such as deep learning, natural language processing, and data analysis. I am passionate about advancing the intersection of computer graphics, computer vision, and deep learning, with a particular interest in diffusion models and NERFs.
 
@@ -156,6 +156,19 @@ With extensive experience in research and engineering, I have developed and depl
 <div class="news mt-3 p-0">
   <h1 class="title mb-4 p-0">News</h1>
 
+
+<div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Oct 30, 2024
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>Finished my work at <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Technical Facilitator for their AI Model Bootcamp.</p>
+      </div>
+    </div>
+
+
 <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
@@ -163,7 +176,7 @@ With extensive experience in research and engineering, I have developed and depl
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I got a contract from  <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Teaching Assistant for their AI Model Bootcamp.</p>
+        <p>I got a contract from  <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Technical Facilitator for their AI Model Bootcamp.</p>
       </div>
     </div>
 
