--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         <div class="col-xs-12 col-sm-6 p-0 pt-2 pb-sm-2 pb-4 pl-sm-4 text-center" style="float: right;">
           <img class="profile-img img-responsive" src="/assets/img/prof_pic.jpg" />
         </div>
+        I am an ML Researcher specializing in 3D Computer Vision and Computer Graphics, leveraging machine learning to push the boundaries of 3D content generation, view synthesis, and image manipulation. My expertise spans deep learning, generative AI, and computer vision, with a strong focus on diffusion models and neural radiance fields (NeRFs).
 
-        An ML Engineer with four years of experience, specializing in computer vision and graphics.
-Previously, I was with Ubisoft Toronto, collaborating with the <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a> team to design innovative solutions that enable creators to automatically generate ultra-realistic faces for non-playable characters. This involved using state-of-the-art generative models and computer vision techniques to streamline the creation of facial models and eliminate artifacts. I also worked with <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Technical Facilitator for their AI Model Bootcamp.
+At <a href="https://toronto.ubisoft.com/ubisoft_la_forge_expands_globally/" target="_blank">Ubisoft La Forge</a>, I worked on designing generative solutions for constructing ultra-realistic face models, reducing model creation time by over 90%. I integrated state-of-the-art generative models such as StyleGAN, Real-ESRGAN, and Pix2Pix, optimizing large-scale training pipelines on GPU clusters. I also worked with <a href="https://vectorinstitute.ai/">Vector Institude</a> as a Deployment of AI Models Technical Facilitator for their AI Model Bootcamp.
 
 I graduated with a master's degree in Electrical and Computer Engineering at York University, conducted research on view synthesis and image manipulation under the guidance of <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>. I am also a Vector Faculty Affiliate Researcher, contributing to the advancement of AI in Canada.
 
